<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExplanationActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_sequence"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sequence_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/DNA"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/linked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/DNA_transcription_explanation"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/first_result_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/DNA"
                app:layout_constraintEnd_toStartOf="@+id/divider5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/first_tesult_list" />

            <TextView
                android:id="@+id/first_result_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/iRNA"
                app:layout_constraintBottom_toBottomOf="@+id/first_tesult_list"
                app:layout_constraintEnd_toStartOf="@+id/divider5"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/first_tesult_list"
                android:layout_width="0dp"
                android:layout_height="97.5dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/first_result_bottom"
                app:layout_constraintTop_toBottomOf="@+id/linked"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/pair_item" />

            <View
                android:id="@+id/divider5"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/first_tesult_list"
                app:layout_constraintEnd_toStartOf="@+id/first_tesult_list"
                app:layout_constraintTop_toTopOf="@+id/first_tesult_list" />

            <ImageView
                android:id="@+id/arrow_1"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/first_result_bottom"
                app:layout_constraintEnd_toEndOf="@+id/first_result_bottom"
                app:layout_constraintStart_toStartOf="@+id/first_result_top"
                app:layout_constraintTop_toBottomOf="@+id/first_result_top"
                app:srcCompat="@drawable/ic_down_arrow" />

            <ProgressBar
                android:id="@+id/progressBar_1"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/divider5"
                app:layout_constraintStart_toEndOf="@+id/divider5"
                app:layout_constraintTop_toTopOf="@+id/divider5" />

            <View
                android:id="@+id/divider7"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_tesult_list" />

            <TextView
                android:id="@+id/second_expl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/DNA_translation_explanation"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider7" />


            <TextView
                android:id="@+id/second_result_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/iRNA"
                app:layout_constraintEnd_toStartOf="@+id/divider9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/second_result_list" />

            <ImageView
                android:id="@+id/arrow_2"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/second_result_bottom"
                app:layout_constraintEnd_toEndOf="@+id/second_result_bottom"
                app:layout_constraintStart_toStartOf="@+id/second_result_top"
                app:layout_constraintTop_toBottomOf="@+id/second_result_top"
                app:srcCompat="@drawable/ic_down_arrow" />

            <TextView
                android:id="@+id/second_result_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tRNA"
                app:layout_constraintBottom_toBottomOf="@+id/second_result_list"
                app:layout_constraintEnd_toStartOf="@+id/divider9"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divider9"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/second_result_list"
                app:layout_constraintEnd_toStartOf="@+id/second_result_list"
                app:layout_constraintTop_toTopOf="@+id/second_result_list" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/second_result_list"
                android:layout_width="0dp"
                android:layout_height="97.5dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/arrow_2"
                app:layout_constraintTop_toBottomOf="@+id/second_expl"
                tools:listitem="@layout/pair_item" />

            <ProgressBar
                android:id="@+id/progressBar_2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/second_result_list"
                app:layout_constraintStart_toStartOf="@+id/second_result_list"
                app:layout_constraintTop_toTopOf="@+id/second_result_list" />

            <View
                android:id="@+id/divider10"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_result_list" />

            <TextView
                android:id="@+id/third_expl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/DNA_acid_synthesis_explanation"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider10" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/third_result_list"
                android:layout_width="0dp"
                android:layout_height="97.5dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/third_result_top"
                app:layout_constraintTop_toBottomOf="@+id/third_expl"
                tools:listitem="@layout/codon_aminoacid_pair" />

            <ProgressBar
                android:id="@+id/progressBar_3"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/third_result_list"
                app:layout_constraintStart_toStartOf="@+id/third_result_list"
                app:layout_constraintTop_toTopOf="@+id/third_result_list" />

            <TextView
                android:id="@+id/third_result_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/iRNA"
                app:layout_constraintEnd_toStartOf="@+id/divider11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/third_result_list" />

            <View
                android:id="@+id/divider11"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@android:color/black"
                app:layout_constraintBottom_toBottomOf="@+id/third_result_list"
                app:layout_constraintEnd_toStartOf="@+id/third_result_list"
                app:layout_constraintTop_toTopOf="@+id/third_result_list" />

            <ImageView
                android:id="@+id/arrow_3"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/aminoacid"
                app:layout_constraintEnd_toEndOf="@+id/second_result_bottom"
                app:layout_constraintStart_toStartOf="@+id/third_result_top"
                app:layout_constraintTop_toBottomOf="@+id/third_result_top"
                app:srcCompat="@drawable/ic_down_arrow" />

            <TextView
                android:id="@+id/aminoacid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/aminoacid_shortened"
                app:layout_constraintBottom_toBottomOf="@+id/third_result_list"
                app:layout_constraintEnd_toStartOf="@+id/divider11"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>